--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,3 @@
-body {
-    background: lightgreen;
-    display: flex;
-    flex-direction: column;
-}
+
+
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZXMuY3NzIn0= */
