--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -1,7 +1,7 @@
 nav
   li
-    a Home
+    a(href="/") Home
   li
-    a About
+    a(href="/about") About
   li
-    a Contact
+    a(href="/contact") Contact
