--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -2,5 +2,5 @@ head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible" content="IE=edge")
   meta(name="viewport" content="width = device-width, initial-scale = 1")
-  link(rel="stylesheet" href="css/styles.min.css")
+  link(rel="stylesheet" href="css/styles.css")
   title Learn Express
